@@ -1,3 +1,10 @@
+2006-12-13 Carlos Nieves Onega <cnieves@iespana.es>
+
+	* include/prototype.h, src/g_smob.c:
+	  Added a new scheme function: get-object-type, returning
+	  the object type (object->type as a scheme string) of the given
+	  object.
+	
 2006-12-05 Carlos Nieves Onega <cnieves@iespana.es>
 
 	* include/prototype.h, src/s_clib.c: Converted the clib_directories 
